--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -1,11 +1,7 @@
 #!/bin/sh
 # Miyoo Flip platform specific variables
 
-if [ -f "$PYUI_FLAG" ]; then
-    export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
-else
-    export SYSTEM_JSON="/userdata/system.json"
-fi
+export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
@@ -24,7 +20,7 @@ export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 
-export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
+export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
 
 # Keycodes
 
