Add custom sorting to emus
Update pyUI to 5533b2b22ee5c1e84a507ee851337032d6180926

--- a/Emu/EASYRPG/config.json
+++ b/Emu/EASYRPG/config.json
@@ -20,5 +20,6 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 6400
 }
