--- a/Emu/WOLF/config.json
+++ b/Emu/WOLF/config.json
@@ -19,5 +19,6 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 5900
 }
