--- a/Emu/-CUSTOM-SYSTEM-/config.json
+++ b/Emu/-CUSTOM-SYSTEM-/config.json
@@ -17,5 +17,6 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 7300
 }
