--- a/Emu/COLECO/config.json
+++ b/Emu/COLECO/config.json
@@ -23,5 +23,6 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 5200
 }
