--- a/Emu/NDS/config.json
+++ b/Emu/NDS/config.json
@@ -24,5 +24,6 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 1500
 }
