--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -33,5 +33,6 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 7100
 }
