--- a/Emu/EASYRPG/config.json
+++ b/Emu/EASYRPG/config.json
@@ -21,5 +21,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6400
+  "sortOrder": 6400,
+  "brand": "Other",
+  "type": "pc",
+  "releaseYear": 2000
 }
