--- a/Emu/LYNX/config.json
+++ b/Emu/LYNX/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3800
+  "sortOrder": 3800,
+  "brand": "Atari",
+  "type": "handheld",
+  "releaseYear": 1989
 }
