--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -34,5 +34,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7100
+  "sortOrder": 7100,
+  "brand": "Other",
+  "type": "handheld",
+  "releaseYear": 2015
 }
