--- a/Emu/VIDEOPAC/config.json
+++ b/Emu/VIDEOPAC/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4800
+  "sortOrder": 4800,
+  "brand": "Other",
+  "type": "homeconsole",
+  "releaseYear": 1978
 }
