--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7800
+  "sortOrder": 7600,
+  "brand": "Commodore",
+  "type": "pc",
+  "releaseYear": 1985
 }
