--- a/Emu/ARCADE/config.json
+++ b/Emu/ARCADE/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2700
+  "sortOrder": 2700,
+  "brand": "Arcade",
+  "type": "arcade",
+  "releaseYear": 1970
 }
