--- a/Emu/ARDUBOY/config.json
+++ b/Emu/ARDUBOY/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6900
+  "sortOrder": 6900,
+  "brand": "Other",
+  "type": "handheld",
+  "releaseYear": 2013
 }
