--- a/Emu/ATARIST/config.json
+++ b/Emu/ATARIST/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3600
+  "sortOrder": 3600,
+  "brand": "Atari",
+  "type": "homeconsole",
+  "releaseYear": 1985
 }
