--- a/Emu/COMMODORE/config.json
+++ b/Emu/COMMODORE/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7700
+  "sortOrder": 7500,
+  "brand": "Commodore",
+  "type": "pc",
+  "releaseYear": 1982
 }
