--- a/Emu/CPC/config.json
+++ b/Emu/CPC/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5700
+  "sortOrder": 5700,
+  "brand": "Other",
+  "type": "homeconsole",
+  "releaseYear": 1984
 }
