--- a/Emu/CPS1/config.json
+++ b/Emu/CPS1/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2800
+  "sortOrder": 2800,
+  "brand": "Arcade",
+  "type": "arcade",
+  "releaseYear": 1988
 }
