--- a/Emu/DC/config.json
+++ b/Emu/DC/config.json
@@ -28,5 +28,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2400
+  "sortOrder": 2400,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1998
 }
