--- a/Emu/DOOM/config.json
+++ b/Emu/DOOM/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6000
+  "sortOrder": 6000,
+  "brand": "Other",
+  "type": "pc",
+  "releaseYear": 1993
 }
