--- a/Emu/DOS/config.json
+++ b/Emu/DOS/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5000
+  "sortOrder": 5000,
+  "brand": "Other",
+  "type": "pc",
+  "releaseYear": 1981
 }
