--- a/Emu/EIGHTHUNDRED/config.json
+++ b/Emu/EIGHTHUNDRED/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3400
+  "sortOrder": 3400,
+  "brand": "Atari",
+  "type": "homeconsole",
+  "releaseYear": 1979
 }
