--- a/Emu/FAIRCHILD/config.json
+++ b/Emu/FAIRCHILD/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4700
+  "sortOrder": 4700,
+  "brand": "Other",
+  "type": "homeconsole",
+  "releaseYear": 1976
 }
