--- a/Emu/FC/config.json
+++ b/Emu/FC/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 200
+  "sortOrder": 200,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1983
 }
