--- a/Emu/FDS/config.json
+++ b/Emu/FDS/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 300
+  "sortOrder": 300,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1986
 }
