--- a/Emu/FIFTYTWOHUNDRED/config.json
+++ b/Emu/FIFTYTWOHUNDRED/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3500
+  "sortOrder": 3500,
+  "brand": "Atari",
+  "type": "homeconsole",
+  "releaseYear": 1982
 }
