--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1300
+  "sortOrder": 1300,
+  "brand": "Nintendo",
+  "type": "handheld",
+  "releaseYear": 2001
 }
