--- a/Emu/GW/config.json
+++ b/Emu/GW/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 100
+  "sortOrder": 100,
+  "brand": "Nintendo",
+  "type": "handheld",
+  "releaseYear": 1980
 }
