--- a/Emu/INTELLIVISION/config.json
+++ b/Emu/INTELLIVISION/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4900
+  "sortOrder": 4900,
+  "brand": "Other",
+  "type": "homeconsole",
+  "releaseYear": 1979
 }
