--- a/Emu/MD/config.json
+++ b/Emu/MD/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1800
+  "sortOrder": 1800,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1988
 }
