--- a/Emu/MEDIA/config.json
+++ b/Emu/MEDIA/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7500
+  "sortOrder": 7300,
+  "brand": "Other",
+  "type": "other",
+  "releaseYear": 9999
 }
