--- a/Emu/MS/config.json
+++ b/Emu/MS/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1700
+  "sortOrder": 1700,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1986
 }
