--- a/Emu/MSU1/config.json
+++ b/Emu/MSU1/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 600
+  "sortOrder": 600,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1994
 }
