--- a/Emu/MSUMD/config.json
+++ b/Emu/MSUMD/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2000
+  "sortOrder": 2000,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1991
 }
