--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1000
+  "sortOrder": 1000,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1996
 }
