--- a/Emu/NDS/config.json
+++ b/Emu/NDS/config.json
@@ -25,5 +25,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1500
+  "sortOrder": 1500,
+  "brand": "Nintendo",
+  "type": "handheld",
+  "releaseYear": 2004
 }
