--- a/Emu/NEOCD/config.json
+++ b/Emu/NEOCD/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4300
+  "sortOrder": 4300,
+  "brand": "SNK",
+  "type": "homeconsole",
+  "releaseYear": 1994
 }
