--- a/Emu/NEOGEO/config.json
+++ b/Emu/NEOGEO/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4200
+  "sortOrder": 4200,
+  "brand": "SNK",
+  "type": "homeconsole",
+  "releaseYear": 1990
 }
