--- a/Emu/NGP/config.json
+++ b/Emu/NGP/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4400
+  "sortOrder": 4400,
+  "brand": "SNK",
+  "type": "handheld",
+  "releaseYear": 1998
 }
