--- a/Emu/NGPC/config.json
+++ b/Emu/NGPC/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4500
+  "sortOrder": 4500,
+  "brand": "SNK",
+  "type": "handheld",
+  "releaseYear": 1999
 }
