--- a/Emu/ODYSSEY/config.json
+++ b/Emu/ODYSSEY/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4600
+  "sortOrder": 4600,
+  "brand": "Other",
+  "type": "homeconsole",
+  "releaseYear": 1972
 }
