--- a/Emu/OPENBOR/config.json
+++ b/Emu/OPENBOR/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6700
+  "sortOrder": 6700,
+  "brand": "Other",
+  "type": "other",
+  "releaseYear": 2005
 }
