--- a/Emu/PCE/config.json
+++ b/Emu/PCE/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3900
+  "sortOrder": 3900,
+  "brand": "NEC",
+  "type": "homeconsole",
+  "releaseYear": 1987
 }
