--- a/Emu/POKE/config.json
+++ b/Emu/POKE/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1400
+  "sortOrder": 1400,
+  "brand": "Nintendo",
+  "type": "handheld",
+  "releaseYear": 2001
 }
