--- a/Emu/PORTS/config.json
+++ b/Emu/PORTS/config.json
@@ -25,5 +25,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6500
+  "sortOrder": 6500,
+  "brand": "Other",
+  "type": "other",
+  "releaseYear": 2000
 }
