--- a/Emu/QUAKE/config.json
+++ b/Emu/QUAKE/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6200
+  "sortOrder": 6200,
+  "brand": "Other",
+  "type": "pc",
+  "releaseYear": 1996
 }
