--- a/Emu/SATELLAVIEW/config.json
+++ b/Emu/SATELLAVIEW/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 800
+  "sortOrder": 800,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1995
 }
