--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -28,5 +28,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2200
+  "sortOrder": 2200,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1994
 }
