--- a/Emu/SCUMMVM/config.json
+++ b/Emu/SCUMMVM/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5100
+  "sortOrder": 5100,
+  "brand": "Other",
+  "type": "pc",
+  "releaseYear": 1981
 }
