--- a/Emu/SEGACD/config.json
+++ b/Emu/SEGACD/config.json
@@ -28,5 +28,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2100
+  "sortOrder": 2100,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1991
 }
