--- a/Emu/SEVENTYEIGHTHUNDRED/config.json
+++ b/Emu/SEVENTYEIGHTHUNDRED/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3700
+  "sortOrder": 3700,
+  "brand": "Atari",
+  "type": "homeconsole",
+  "releaseYear": 1986
 }
