--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 500
+  "sortOrder": 500,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1990
 }
