--- a/Emu/SGB/config.json
+++ b/Emu/SGB/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 700
+  "sortOrder": 700,
+  "brand": "Nintendo",
+  "type": "handheld",
+  "releaseYear": 1994
 }
