--- a/Emu/SGFX/config.json
+++ b/Emu/SGFX/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4100
+  "sortOrder": 4100,
+  "brand": "NEC",
+  "type": "homeconsole",
+  "releaseYear": 1989
 }
