--- a/Emu/SUFAMI/config.json
+++ b/Emu/SUFAMI/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1100
+  "sortOrder": 1100,
+  "brand": "Nintendo",
+  "type": "homeconsole",
+  "releaseYear": 1996
 }
