--- a/Emu/SUPERVISION/config.json
+++ b/Emu/SUPERVISION/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5300
+  "sortOrder": 5300,
+  "brand": "Other",
+  "type": "handheld",
+  "releaseYear": 1982
 }
