--- a/Emu/THIRTYTWOX/config.json
+++ b/Emu/THIRTYTWOX/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2300
+  "sortOrder": 2300,
+  "brand": "Sega",
+  "type": "homeconsole",
+  "releaseYear": 1994
 }
