--- a/Emu/VB/config.json
+++ b/Emu/VB/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 900
+  "sortOrder": 900,
+  "brand": "Nintendo",
+  "type": "handheld",
+  "releaseYear": 1995
 }
