--- a/Emu/VIC20/config.json
+++ b/Emu/VIC20/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7600
+  "sortOrder": 7400,
+  "brand": "Commodore",
+  "type": "homeconsole",
+  "releaseYear": 1980
 }
