--- a/Emu/WS/config.json
+++ b/Emu/WS/config.json
@@ -24,5 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6300
+  "sortOrder": 6300,
+  "brand": "Other",
+  "type": "handheld",
+  "releaseYear": 1999
 }
