--- a/Emu/WSC/config.json
+++ b/Emu/WSC/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6600
+  "sortOrder": 6600,
+  "brand": "Other",
+  "type": "handheld",
+  "releaseYear": 2000
 }
