--- a/Emu/X68000/config.json
+++ b/Emu/X68000/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5800
+  "sortOrder": 5800,
+  "brand": "Other",
+  "type": "pc",
+  "releaseYear": 1987
 }
