--- a/Emu/ZXS/config.json
+++ b/Emu/ZXS/config.json
@@ -20,5 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5500
+  "sortOrder": 5500,
+  "brand": "Other",
+  "type": "homeconsole",
+  "releaseYear": 1982
 }
