Add ability to change game system ordering
Settings -> Extra Settings -> Misc Settings

Update to PyUI 808b280c7f90419cfe65b2bb97afc89abb72d2be

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -4,5 +4,6 @@
     "turboDelayMs": 300,
     "enableButtonWatchers": false,
     "enableWifiMonitor": true,
-    "mainMenuTitle": "spruceOS"
+    "mainMenuTitle": "spruceOS",
+    "gameSystemSortMode": "Alphabetical"
 }
