--- a/Emu/WS/config.json
+++ b/Emu/WS/config.json
@@ -24,8 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5600,
-  "brand": "Other",
+  "sortOrder": 7300,
+  "brand": "Bandai",
   "type": "handheld",
   "releaseYear": 1999
 }
