--- a/Emu/CHAI/config.json
+++ b/Emu/CHAI/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7200,
-  "brand": "Other",
-  "type": "other",
+  "sortOrder": 600,
+  "brand": "modernengine",
+  "type": "Other",
   "releaseYear": 2016
 }
