--- a/Emu/CPS2/config.json
+++ b/Emu/CPS2/config.json
@@ -24,8 +24,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 2900,
-  "brand": "Arcade",
+  "sortOrder": 1100,
+  "brand": "Capcom",
   "type": "arcade",
   "releaseYear": 1993
 }
