--- a/Emu/DOOM/config.json
+++ b/Emu/DOOM/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6700,
-  "brand": "Other",
-  "type": "pc",
-  "releaseYear": 1993
+  "sortOrder": 1400,
+  "brand": "idSoftware",
+  "type": "modernengine",
+  "releaseYear": 1995
 }
