--- a/Emu/DOS/config.json
+++ b/Emu/DOS/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6200,
-  "brand": "Other",
+  "sortOrder": 1500,
+  "brand": "Microsoft",
   "type": "pc",
   "releaseYear": 1981
 }
