--- a/Emu/EASYRPG/config.json
+++ b/Emu/EASYRPG/config.json
@@ -21,8 +21,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6900,
-  "brand": "Other",
-  "type": "pc",
-  "releaseYear": 2000
+  "sortOrder": 1600,
+  "brand": "modernengine",
+  "type": "fantasy",
+  "releaseYear": 2008
 }
