--- a/Emu/FAKE08/config.json
+++ b/Emu/FAKE08/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6000,
-  "brand": "Other",
-  "type": "handheld",
+  "sortOrder": 1900,
+  "brand": "modernengine",
+  "type": "fantasy",
   "releaseYear": 2013
 }
