--- a/Emu/FBNEO/config.json
+++ b/Emu/FBNEO/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 3100,
-  "brand": "Arcade",
+  "sortOrder": 2000,
+  "brand": "modernengine",
   "type": "arcade",
   "releaseYear": 2003
 }
