--- a/Emu/GG/config.json
+++ b/Emu/GG/config.json
@@ -27,5 +27,9 @@
       "name": "Remove per-game launch setting override",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
-  ]
+  ],
+  "sortOrder": 2700,
+  "brand": "Sega",
+  "type": "handheld",
+  "releaseYear": 1990
 }
