--- a/Emu/INTELLIVISION/config.json
+++ b/Emu/INTELLIVISION/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4900,
-  "brand": "Other",
+  "sortOrder": 2900,
+  "brand": "Mattel",
   "type": "homeconsole",
   "releaseYear": 1979
 }
