--- a/Emu/MEDIA/config.json
+++ b/Emu/MEDIA/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7300,
-  "brand": "Other",
-  "type": "other",
+  "sortOrder": 3300,
+  "brand": "Misc",
+  "type": "mediaplayer",
   "releaseYear": 9999
 }
