--- a/Emu/OPENBOR/config.json
+++ b/Emu/OPENBOR/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 7100,
-  "brand": "Other",
-  "type": "other",
+  "sortOrder": 4600,
+  "brand": "modernengine",
+  "type": "fantasy",
   "releaseYear": 2005
 }
