--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -34,8 +34,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6100,
-  "brand": "Other",
-  "type": "handheld",
+  "sortOrder": 4900,
+  "brand": "modernengine",
+  "type": "fantasy",
   "releaseYear": 2015
 }
