--- a/Emu/QUAKE/config.json
+++ b/Emu/QUAKE/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6800,
-  "brand": "Other",
-  "type": "pc",
+  "sortOrder": 5400,
+  "brand": "modernengine",
+  "type": "fantasy",
   "releaseYear": 1996
 }
