--- a/Emu/SGB/config.json
+++ b/Emu/SGB/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 1000,
+  "sortOrder": 6200,
   "brand": "Nintendo",
-  "type": "handheld",
+  "type": "homeconsole",
   "releaseYear": 1994
 }
