--- a/Emu/TIC/config.json
+++ b/Emu/TIC/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5800,
-  "brand": "Other",
-  "type": "handheld",
+  "sortOrder": 6700,
+  "brand": "modernengine",
+  "type": "fantasy",
   "releaseYear": 2010
 }
