--- a/Emu/VECTREX/config.json
+++ b/Emu/VECTREX/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5100,
-  "brand": "Other",
+  "sortOrder": 6900,
+  "brand": "General Consumer Electronics",
   "type": "homeconsole",
   "releaseYear": 1982
 }
