--- a/Emu/VIDEOPAC/config.json
+++ b/Emu/VIDEOPAC/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 4800,
-  "brand": "Other",
+  "sortOrder": 7100,
+  "brand": "Phillips",
   "type": "homeconsole",
-  "releaseYear": 1978
+  "releaseYear": 1983
 }
