--- a/Emu/WSC/config.json
+++ b/Emu/WSC/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5700,
-  "brand": "Other",
+  "sortOrder": 7400,
+  "brand": "Bandai",
   "type": "handheld",
   "releaseYear": 2000
 }
