--- a/Emu/X68000/config.json
+++ b/Emu/X68000/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 6500,
-  "brand": "Other",
+  "sortOrder": 7500,
+  "brand": "Sharp",
   "type": "pc",
   "releaseYear": 1987
 }
