--- a/Emu/ZXS/config.json
+++ b/Emu/ZXS/config.json
@@ -20,8 +20,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
-  "sortOrder": 5200,
-  "brand": "Other",
+  "sortOrder": 7600,
+  "brand": "Sinclair",
   "type": "homeconsole",
   "releaseYear": 1982
 }
