Allow deeper customization of game system select ordering

--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -5,5 +5,5 @@
     "enableButtonWatchers": false,
     "enableWifiMonitor": true,
     "mainMenuTitle": "spruceOS",
-    "gameSystemSortMode": "Alphabetical"
+    "gameSystemSortMode": "SortOrderKey"
 }
