--- a/Emu/NDS/config/drastic-Flip.cfg
+++ b/Emu/NDS/config/drastic-Flip.cfg
@@ -1,8 +1,9 @@
-frameskip_type = 2
+frameskip_type = 0
 frameskip_value = 1
 safe_frameskip = 0
 show_frame_counter = 0
-screen_orientation = 0
+screen_orientation = 3
+screen_scaling = 2
 screen_swap = 0
 savestate_number = 0
 fast_forward = 0
@@ -13,14 +14,12 @@ mirror_touch = 0
 compress_savestates = 1
 savestate_snapshot = 1
 unzip_roms = 0
-preload_roms = 0
 backup_in_savestates = 1
 ignore_gamecard_limit = 0
 frame_interval = 0
 trim_roms = 0
 fix_main_2d_screen = 0
 disable_edge_marking = 0
-interframe_blend = 0
 hires_3d = 1
 use_rtc_custom_time = 0
 rtc_custom_time = 0
