--- a/Emu/NDS/config.json
+++ b/Emu/NDS/config.json
@@ -9,7 +9,7 @@
   "extlist": "nds|zip|7z|rar",
   "launchlist": [
     {
-      "name": "Emu Core: (✓TRNGAJE)-steward-original",
+      "name": "Emu Core: TRNGAJE-steward-(✓original)",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
