--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -5,5 +5,6 @@
     "enableButtonWatchers": false,
     "enableWifiMonitor": true,
     "mainMenuTitle": "spruceOS",
-    "gameSystemSortMode": "SortOrderKey"
+    "gameSystemSortMode": "SortOrderKey",
+    "include_stock_os_launch_option": false
 }
