finish thru CPS3; correct some "selected" values I had previously misset

--- a/Emu/ARCADE/config.json
+++ b/Emu/ARCADE/config.json
@@ -25,7 +25,7 @@
         "mame2003_plus",
         "fbalpha2012"
       ],
-      "selected": "uae4arm",
+      "selected": "fbneo",
       "overrides": {}
     }
   },  "sortOrder": 300,
