--- a/Emu/COLECO/config.json
+++ b/Emu/COLECO/config.json
@@ -24,7 +24,7 @@
         "bluemsx",
         "gearcoleco"
       ],
-      "selected": "uae4arm",
+      "selected": "bluemsx",
       "overrides": {}
     }
   },
