--- a/Emu/CPS1/config.json
+++ b/Emu/CPS1/config.json
@@ -6,24 +6,28 @@
   "themecolor": "0000FF",
   "launch": "../.emu_setup/standard_launch.sh",
   "extlist": "zip|7z|cue",
-  "launchlist": [
-    {
-      "name": "Emu Core: (✓FBALPHA2012)-fbneo",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
+  "launchlist": [],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
     },
-    {
-      "name": "CPU: (✓SMART)-Perf-Max",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
+    "Emulator": {
+      "display": "Retroarch Core",
+      "options": [
+        "fbalpha2012",
+        "fbneo"
+      ],
+      "selected": "fbalpha2012",
+      "overrides": {}
     }
-  ],
+  },
   "sortOrder": 1500,
   "brand": "Capcom",
   "type": "arcade",
