--- a/App/PyUI/py-ui-config.json
+++ b/App/PyUI/py-ui-config.json
@@ -6,5 +6,6 @@
     "enableWifiMonitor": true,
     "mainMenuTitle": "spruceOS",
     "gameSystemSortMode": "SortOrderKey",
-    "includeStockOsLaunchOption": false
+    "includeStockOsLaunchOption": false,
+    "allowPyUiGameSwitcher": false
 }
