--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -1,6 +1,6 @@
 alwaysUseBoxartInGS=1
 blf_intensity=Off
-boot_to=MainUI
+boot_to=spruceUI
 disableNetworkServicesInGame=1
 disableWifiInGame=1
 disableJoystick=1
@@ -9,7 +9,6 @@ checkForUpdates=0
 enableNetworkTimeSync=1
 expertRA=1
 expert_settings=1
-fake08_allow_png=1
 genesis_plus_gx_wide=1
 hold_home=Game Switcher
 idlemon_in_game=30m
@@ -21,12 +20,10 @@ pico8_control_profile=Racing
 pico8_stretch=1
 ppsspp_pause_exit=1
 ra_auto_state=0
-recentsTile=1
 rumble_intensity=Medium
 runGSOnGameExit=1
 samba=1
 sftpgo=1
-show_battery_percent=0
 skip_shutdown_confirm=1
 sleep_powerdown=5m
 syncthing=1
