fbneo thru neocd

--- a/Emu/ARCADE/config.json
+++ b/Emu/ARCADE/config.json
@@ -28,7 +28,8 @@
       "selected": "fbneo",
       "overrides": {}
     }
-  },  "sortOrder": 300,
+  },
+  "sortOrder": 300,
   "brand": "Arcade",
   "type": "arcade",
   "releaseYear": 1971
