--- a/Emu/GAMETANK/config.json
+++ b/Emu/GAMETANK/config.json
@@ -7,20 +7,19 @@
   "imgpath": "../../Roms/GAMETANK/Imgs",
   "gamelist": "../../Roms/GAMETANK/miyoogamelist.xml",
   "extlist": "gtr",
-  "launchlist": [
-    {
-      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
+  "launchlist": [],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
     }
-  ],
+  },
   "sortOrder": 2650,
   "brand": "other",
   "type": "fantasy",
