--- a/Emu/MEDIA/config.json
+++ b/Emu/MEDIA/config.json
@@ -6,20 +6,7 @@
   "themecolor": "DDEEFF",
   "launch": "../.emu_setup/standard_launch.sh",
   "extlist": "mp4|mkv|avi|mov|flv|ts|mp3|m4a|wav|aac|flac|ogg|opus|mka",
-  "launchlist": [
-    {
-      "name": "CPU: (✓SMART)-Perf-Max",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
-    }
-  ],
+  "launchlist": [],
   "sortOrder": 3300,
   "brand": "Misc",
   "type": "mediaplayer",
