--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -6,24 +6,28 @@
   "themecolor": "FF00FF",
   "launch": "../.emu_setup/standard_launch.sh",
   "extlist": "gba|zip|7z|bin",
-  "launchlist": [
-    {
-      "name": "Emu Core: (✓MGBA)-gpsp",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
+  "launchlist": [],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
     },
-    {
-      "name": "CPU: (✓SMART)-Perf-Max",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
+    "Emulator": {
+      "display": "Retroarch Core",
+      "options": [
+        "mgba",
+        "gpsp"
+      ],
+      "selected": "mgba",
+      "overrides": {}
     }
-  ],
+  },
   "sortOrder": 2800,
   "brand": "Nintendo",
   "type": "handheld",
