--- a/Emu/LYNX/config.json
+++ b/Emu/LYNX/config.json
@@ -24,6 +24,27 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
+    },
+    "Emulator": {
+      "display": "Retroarch Core",
+      "options": [
+        "handy",
+        "mednafen_lynx"
+      ],
+      "selected": "handy",
+      "overrides": {}
+    }
+  },
   "sortOrder": 900,
   "brand": "Atari",
   "type": "handheld",
