--- a/Emu/MS/config.json
+++ b/Emu/MS/config.json
@@ -6,24 +6,29 @@
   "themecolor": "740009",
   "launch": "../.emu_setup/standard_launch.sh",
   "extlist": "gen|smd|md|32x|bin|iso|sms|68k|chd|zip|7z",
-  "launchlist": [
-    {
-      "name": "Emu Core: (✓GENESIS+GX)-picodrive-gearsystem",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
+  "launchlist": [],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
     },
-    {
-      "name": "CPU: (✓SMART)-Perf-Max",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
+    "Emulator": {
+      "display": "Retroarch Core",
+      "options": [
+        "genesis_plus_gx",
+        "picodrive",
+        "gearsystem"
+      ],
+      "selected": "genesis_plus_gx",
+      "overrides": {}
     }
-  ],
+  },
   "sortOrder": 5900,
   "brand": "Sega",
   "type": "homeconsole",
