--- a/Emu/NDS/config.json
+++ b/Emu/NDS/config.json
@@ -7,24 +7,30 @@
   "launch": "../.emu_setup/standard_launch.sh",
   "noaudiofix": 1,
   "extlist": "nds|zip|7z|rar",
-  "launchlist": [
-    {
-      "name": "Emu Core: TRNGAJE-steward-(✓original)",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
+  "launchlist": [],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
     },
-    {
-      "name": "CPU: (✓SMART)-Perf-Max",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
+    "Emulator": {
+      "display": "Emulator",
+      "devices": ["MIYOO_FLIP", "TRIMUI_BRICK"],
+      "options": [
+        "DraStic-original",
+        "DraStic-Steward",
+        "DraStic-trngaje"
+      ],
+      "selected": "drastic-original",
+      "overrides": {}
     }
-  ],
+  },
   "sortOrder": 4000,
   "brand": "Nintendo",
   "type": "handheld",
