Rest of systems converted to config.json-based cpu and core switching, with the following exceptions, which have not yet been handled: PSX - km_duckswanstation_xtreme only for A30 NDS - different for every device :devastated: N64 - different for every device :devastated: DC  - different for every device :devastated: SATURN - need to review to see where we're at make note of breaking change - emu launch settings/overrides will need to be done freshly when migrating from 3.3.2 - we are not handling the change for them.

--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -10,20 +10,20 @@
     {
       "name": "Emu Core: (✓LUDICROUSN64)-parallel-mupen64plus",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
-    },
-    {
-      "name": "CPU: (✓SMART)-Perf-Max",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
-    },
-    {
-      "name": "Save current launch settings as per-game override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
-    },
-    {
-      "name": "Remove per-game launch setting override",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/remove_override.sh"
     }
   ],
+  "menuOptions": {
+    "Governor": {
+      "display": "CPU Mode",
+      "options": [
+        "Smart",
+        "Performance",
+        "Overclock"
+      ],
+      "selected": "Smart",
+      "overrides": {}
+    }
+  },
   "sortOrder": 3900,
   "brand": "Nintendo",
   "type": "homeconsole",
