add boolean "hide" json field for apps (not implemented in PyUI yet, so these are still broken in the traditional way at the moment)

--- a/App/-OTA/config.json
+++ b/App/-OTA/config.json
@@ -2,5 +2,6 @@
   "label": "Check for Updates",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/updater.png",
   "launch": "launch.sh",
-  "description": "Download and install updates over Wi-Fi"
+  "description": "Download and install updates over Wi-Fi",
+  "hide": false
 }
