--- a/App/BoxartScraper/config.json
+++ b/App/BoxartScraper/config.json
@@ -2,5 +2,6 @@
   "label": "Boxart Scraper",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/scraper.png",
   "launch": "launch.sh",
-  "description": "Scrape game boxart"
+  "description": "Scrape game boxart",
+  "hide": false
 }
