--- a/App/RealTimeClock/config.json
+++ b/App/RealTimeClock/config.json
@@ -2,5 +2,6 @@
   "label": "Real Time Clock",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/rtc.png",
   "launch": "launch.sh",
-  "description": "Set the time"
+  "description": "Set the time",
+  "hide": false
 }
