--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -2,5 +2,6 @@
   "label": "A Firmware Update Is Available",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/firmwareupdate.png",
   "launch": "launch.sh",
-  "description": "Run this to get the latest fixes"
+  "description": "Run this to get the latest fixes",
+  "hide": false
 }
