--- a/App/-Updater/config.json
+++ b/App/-Updater/config.json
@@ -2,5 +2,6 @@
   "label": "EZ Updater",
   "icon": "/mnt/SDCARD/Updater/imgs/recents.png",
   "launch": "../../Updater/updater.sh",
-  "description": "Update file found, install to update to spruce"
+  "description": "Update file found, install to update to spruce",
+  "hide": false
 }
