--- a/App/FileManagement/config.json
+++ b/App/FileManagement/config.json
@@ -2,5 +2,6 @@
   "label": "File Management",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/file.png",
   "launch": "launch.sh",
-  "description": "View and edit files on your SD card"
+  "description": "View and edit files on your SD card",
+  "hide": false
 }
