--- a/App/PortMaster/config.json
+++ b/App/PortMaster/config.json
@@ -2,5 +2,6 @@
   "label": "PortMaster",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/portmaster.png",
   "launch": "launch.sh",
-  "description": "PortMaster Menu"
+  "description": "PortMaster Menu",
+  "hide": false
 }
