--- a/App/RetroArch/config.json
+++ b/App/RetroArch/config.json
@@ -2,5 +2,6 @@
   "label": "RetroArch",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/retroarch.png",
   "launch": "launch.sh",
-  "description": "Core and game configuration"
+  "description": "Core and game configuration",
+  "hide": false
 }
