--- a/App/ThemePacker/config.json
+++ b/App/ThemePacker/config.json
@@ -1,6 +1,7 @@
 {
-	"#label":        "Theme Packer",
-	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/app/emufresh.png",
-	"launch":       "launch.sh",
-	"description":  "Pack themes into 7z archives"
+  "#label": "Theme Packer",
+  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/emufresh.png",
+  "launch": "launch.sh",
+  "description": "Pack themes into 7z archives",
+  "hide": true
 }
