--- a/App/spruceHelp/config.json
+++ b/App/spruceHelp/config.json
@@ -1,6 +1,7 @@
 {
-	"label":        "Sapling Guide",
-	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/app/expertappswitch.png",
-	"launch":       "launch.sh",
-	"description":  "Information about spruce basics"
+  "label": "Sapling Guide",
+  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/expertappswitch.png",
+  "launch": "launch.sh",
+  "description": "Information about spruce basics",
+  "hide": false
 }
