Remove App section from iconfresh logic as first step towards eliminating it; standardize app icon paths in app config.jsons for better pyui compliance

--- a/App/-Updater/config.json
+++ b/App/-Updater/config.json
@@ -1,6 +1,6 @@
 {
   "label": "EZ Updater",
-  "icon": "/mnt/SDCARD/Updater/imgs/recents.png",
+  "icon": "updater.png",
   "launch": "../../Updater/updater.sh",
   "description": "Update file found, install to update to spruce"
 }
