--- a/App/GameNursery/config.json
+++ b/App/GameNursery/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Game Nursery",
-  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/iconfresh.png",
+  "icon": "iconfresh.png",
   "launch": "launch.sh",
   "description": "Download free games directly to your device"
 }
