--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -1,6 +1,6 @@
 {
 	"#label":        "Spruce Restore",
-	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/app/restore.png",
+	"icon":	        "restore.png",
 	"launch":       "launch.sh",
 	"description":  "Restore configs & settings from backup"
 }
