--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -1,6 +1,6 @@
 {
   "label": "A Firmware Update Is Available",
-  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/firmwareupdate.png",
+  "icon": "firmwareupdate.png",
   "launch": "launch.sh",
   "description": "Run this to get the latest fixes"
 }
