--- a/App/-OTA/config.json
+++ b/App/-OTA/config.json
@@ -1,6 +1,6 @@
 {
   "label": "Check for Updates",
-  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/updater.png",
+  "icon": "updater.png",
   "launch": "launch.sh",
   "description": "Download and install updates over Wi-Fi"
 }
