--- a/App/spruceHelp/config.json
+++ b/App/spruceHelp/config.json
@@ -1,6 +1,6 @@
 {
 	"label":        "Sapling Guide",
-	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/app/expertappswitch.png",
+	"icon":	        "expertappswitch.png",
 	"launch":       "launch.sh",
 	"description":  "Information about spruce basics"
 }
