Adjust some spruce default settings for full screen grid game view

--- a/Themes/SPRUCE/config.json
+++ b/Themes/SPRUCE/config.json
@@ -40,7 +40,9 @@
         "color": "#FBF1C7",
         "selectedcolor": "#FBF1C7"
     },
-    "bindOverMiyooTheme":true,
+    "bindOverMiyooTheme": true,
     "recentsEnabled": false,
-    "topBarInitialXOffset": 60
+    "topBarInitialXOffset": 60,
+    "setTopBarTextToGameSelection": true,
+    "fullScreenGridGameMenuResizeType": "FIT"
 }
