fix remaining icon and iconsel paths that still had full paths and not just basenames

--- a/Emu/CPS2/config.json
+++ b/Emu/CPS2/config.json
@@ -1,7 +1,7 @@
 {
   "label": "CPS2",
-  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps2.png",
-  "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/cps2_sel.png",
+  "icon": "cps2.png",
+  "iconsel": "cps2_sel.png",
   "background": "",
   "themecolor": "FFFF00",
   "launch": "../.emu_setup/standard_launch.sh",
