--- a/Emu/GG/config.json
+++ b/Emu/GG/config.json
@@ -1,7 +1,7 @@
 {
   "label": "Game Gear",
-  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gg.png",
-  "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/gg_sel.png",
+  "icon": "gg.png",
+  "iconsel": "gg_sel.png",
   "background": "",
   "themecolor": "FFFFFF",
   "launch": "../.emu_setup/standard_launch.sh",
