--- a/Emu/MAME2003PLUS/config.json
+++ b/Emu/MAME2003PLUS/config.json
@@ -1,7 +1,7 @@
 {
   "label": "MAME 03+",
-  "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/mame.png",
-  "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/mame_sel.png",
+  "icon": "mame.png",
+  "iconsel": "mame_sel.png",
   "background": "",
   "themecolor": "00CCFF",
   "launch": "../.emu_setup/standard_launch.sh",
