Update extlist to support multiple file extensions
Thank you Ricardo_estep!

--- a/Emu/GAMETANK/config.json
+++ b/Emu/GAMETANK/config.json
@@ -6,7 +6,7 @@
   "rompath": "../../Roms/GAMETANK",
   "imgpath": "../../Roms/GAMETANK/Imgs",
   "gamelist": "../../Roms/GAMETANK/miyoogamelist.xml",
-  "extlist": "gtr",
+  "extlist": "gtr|zip|7z",
   "launchlist": [
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
