--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -30,7 +30,7 @@
         "yabasanshiro-standalone-bios",
         "yabasanshiro-standalone-hle"
       ],
-      "selected": "fbalpha2012",
+      "selected": "yabasanshiro-libretro",
       "overrides": {}
     }
   },
@@ -39,5 +39,6 @@
   "type": "homeconsole",
   "releaseYear": 1994,
   "default_emulator": "yabasanshiro-libretro",
-  "scaling_min_freq": 1008000
+  "scaling_min_freq": 1008000,
+  "devices": ["TRIMUI_BRICK, TRIMUI_SMART_PRO, MIYOO_FLIP"]
 }
