--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -42,6 +42,7 @@
         "km_ludicrousn64_2k22_xtreme_amped",
         "parallel_n64",
         "mupen64plus",
+        "mupen64plus_next",
         "mupen64plus-standalone"
       ],
       "selected": "km_ludicrousn64_2k22_xtreme_amped",
