leverage "devices" json field to hide or unhide apps and emus per device

--- a/App/PixelReader/config.json
+++ b/App/PixelReader/config.json
@@ -3,5 +3,6 @@
   "icon": "ereader.png",
   "launch": "launch.sh",
   "description": "Read Ebooks on your device",
+  "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO", "MIYOO_FLIP"],
   "hide": false
 }
