--- a/App/PortMaster/config.json
+++ b/App/PortMaster/config.json
@@ -3,5 +3,6 @@
   "icon": "portmaster.png",
   "launch": "launch.sh",
   "description": "PortMaster Menu",
+  "devices": ["MIYOO_FLIP"],
   "hide": false
 }
