--- a/App/RealTimeClock/config.json
+++ b/App/RealTimeClock/config.json
@@ -3,5 +3,6 @@
   "icon": "rtc.png",
   "launch": "launch.sh",
   "description": "Set the time",
+  "devices": ["MIYOO_A30", "MIYOO_FLIP"],
   "hide": false
 }
