--- a/App/USBStorageMode/config.json
+++ b/App/USBStorageMode/config.json
@@ -3,5 +3,6 @@
   "icon": "usb.png",
   "launch": "launch.sh",
   "description": "Transfer files over USB",
+  "devices": ["TRIMUI_BRICK", "MIYOO_A30", "MIYOO_FLIP"],
   "hide": false
 }
